@@ -1,5 +1,8 @@
 2006-04-05  David Reveman  <davidr@novell.com>
 
+	* hw/xgl/glxext/xglglxext.c (xglInitExtensions): Fix glWindowPos3f
+	proc address lookup.
+
 	* hw/xgl/glx/xglx.c: Add xglxPointerProc and
 	xglxChangePointerControl so that acceleration and threshold
 	can be set properly.
